[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "time-together"
version = "0.1.0"
description = "Co-presence engine: how much time you spend with people in your group, and a Wrapped."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "s-eun-young-g" }]
keywords = ["co-presence", "location", "social", "wrapped", "bluetooth"]

[project.scripts]
tt = "tt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
