[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "time-together"
version = "0.1.0"
description = "Co-presence engine: how much time you spend with people in your group, and a Wrapped."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "s-eun-young-g" }]
keywords = ["co-presence", "location", "social", "wrapped", "bluetooth"]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.29", "sqlmodel>=0.0.16"]

[project.scripts]
tt = "tt.cli:main"
tt-server = "tt.server.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
